fixed cs styling for password
Fixed styling for the password box in signup and login so that the error message appears under.
Files changed:
Signup.js - Added appropriate classname in order to add styling
App.css- added styling for class name .error-message because it wasnt there before
Login.module.css - Added styling in order to make the forms look better.

--- a/my-app/src/Styles/App.css
+++ b/my-app/src/Styles/App.css
@@ -20,3 +20,8 @@
   overflow-x: hidden;
   height: 100%;
 }
+.error-message{
+  color:red;
+  display: block;
+  font-size:.5em;
+}
