--- a/my-app/src/Styles/Login.module.css
+++ b/my-app/src/Styles/Login.module.css
@@ -46,21 +46,7 @@
   box-shadow: inset 0px -3px 0px 0px rgba(187, 187, 187, 0.2);
   transition: box-shadow 0.2s ease-in;
 }
-.LoginPasswordBox{
-  box-sizing: border-box;
-  width: 80%;
-  padding: 10px;
-  font-size: 1.3rem;
-  border: none;
-  border-radius: 5px;
-  background-color: #ffffff;
-  box-sizing: border-box;
-  padding-left: 1.5rem;
-  padding-right: 2.5rem;
-  padding-bottom: 1rem;
-  box-shadow: inset 0px -3px 0px 0px rgba(187, 187, 187, 0.2);
-  transition: box-shadow 0.2s ease-in;
-}
+
 
 .LoginTextBox:focus {
   box-shadow: inset 0px -3px 0px 0px rgba(34, 193, 195, 0.7);
@@ -110,7 +96,7 @@
   border: none;
   padding: 0;
   margin-bottom: 10px;
-  background-image:url('../../public/Images/btn_google_signin_light_normal_web2x.png');
+  background-image: url('../../public/Images/btn_google_signin_light_normal_web2x.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -128,7 +114,7 @@
   border: none;
   padding: 0;
   margin-bottom: 10px;
-  background-image:url('../../public/Images/signupbutton.png');
+  background-image: url('../../public/Images/signupbutton.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -212,12 +198,45 @@
   margin-bottom: 0.8em;
 }
 
-.PasswordToggle {
+.InputGroup {
   position: absolute;
-  right: calc(15% - 5px);
-  top: 40%;
-  transform: translateY(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.PasswordToggle {
+  /* right: calc(15% - 5px); */
+  /* top: 40%; */
+  /* transform: translateY(-50%); */
   cursor: pointer;
+  padding-top: -10px;
+  padding-right: 10px;
+}
+
+.LoginPasswordBox {
+  margin:0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 80%;
+  font-size: 1.3rem;
+  border-radius: 5px;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  box-shadow: inset 0px -3px 0px 0px rgba(187, 187, 187, 0.2);
+  transition: box-shadow 0.2s ease-in;
+}
+.LoginPasswordInput{
+  box-sizing: border-box;
+  padding-top: 1em;
+  padding-left: 1.5em;
+  padding-bottom: 1rem;
+  height: 100%;
+  flex-grow: 1;
+  flex-shrink: 0;
+  border-radius: 0 0 0 5px;
 }
 
 #AppLogo {
@@ -229,27 +248,30 @@
 }
 
 @media(orientation:landscape) {
-  @media(max-width:915px)
-    {
+  @media(max-width:915px) {
     .LoginContainer {
       width: 80%;
       padding: 1.1vh;
     }
-    .LoginTextBox{
+
+    .LoginTextBox {
       font-size: 1rem;
-      padding: 4px; 
+      padding: 4px;
     }
-    .LoginButton{
+
+    .LoginButton {
       margin-bottom: 5px;
     }
-    .Separator{
+
+    .Separator {
       margin: 5px 0;
     }
-    #AppLogo{
+
+    #AppLogo {
       width: 0em;
       margin-top: 0em;
       margin-bottom: 0em;
     }
   }
-  
+
 }
